# tcpb-client

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  Pipfile  README.md  README.rst  bitbucket-pipelines.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py  sitemap.xml  tcpb-example.py  tox.ini
.github/workflows/: basic-code-quality.yaml  basic-code-quanlity.yaml  publish-to-pypi.yaml  test.yaml
CHANGELOG/: index.html
CONTRIBUTING/: index.html
Examples/basic_energy/: index.html
Examples/ci_overlap/: index.html
Examples/cisno_casci/: index.html
Examples/cisno_casci copy/: index.html
Examples/frontend/: index.html
Examples/frontend_guess_reuse/: index.html
Examples/guess_reuse/: index.html
Examples/sa_casscf/: index.html
Examples/tddft/: index.html
clients/: index.html
cpp/: Makefile  tcpb.cpp  tcpb.h
cpp/examples/: Makefile  tcpb-example  tcpb-example.cpp
cpp/include/: tcpb.h  terachem_server.pb.h
cpp/src/: tcpb.cpp  terachem_server.pb.cpp
docs/: CHANGELOG.md  CONTRIBUTING.md  Doxyfile  Doxyfile-py  Makefile  clients.md  conf.py  index.rst  keywords.md
examples/: basic_energy.py  ci-overlap-example.py  cisno-casci-example.py  fomo-casci-example.py  frontend_example.py  guess-reuse-example.py  guess_reuse_tcfe.py  sa-casscf-example.py  tddft-example.py  tddft_example_structured.py  verbose-example.py
keywords/: index.html
proto/: terachem_server.proto
protobuf/: terachem_server.proto
python/: setup.py  tcpb-context-example.py
python/docs/: Makefile  conf.py  index.rst  make.bat  tcpb.rst
python/docs/source/: conf.py  index.rst
python/examples/: basic-example.py  ci-overlap-example.py  cisno-casci-example.py  context-example.py  fomo-casci-example.py  guess-reuse-example.py  sa-casscf-example.py  tcpb-ci-overlap.py  tcpb-context-example.py  tcpb-example.py  tcpb_ci_overlap.py  verbose-example.py
python/tcpb/: __init__.py  pbhelper.py  serial_utils.py  tcpb.py  terachem_server_pb2.py
random_observations/: index.html
scripts/: release.py
search/: search_index.json
src/tcpb/: __init__.py  clients.py  exceptions.py  utils.py
tcpb/: __init__.py  clients.py  exceptions.py  models.py  tcpb.py  terachem_server_pb2.py  utils.py
tests/: Makefile  available_test.py  conftest.py  energy_grad_force_test.py  mock_server.py  pbhelper.py  test_ci_overlap.py  test_cisno_casci.py  test_energy_grad_force.py  test_fomo_casci.py  test_frontend_client.py  test_keywords.py  test_models.py  test_python_tcpb.py  test_qmmm_basic.py  test_tcpb.py  test_tcpb_client.py  test_utils.py
tests/answers/: cisno_casci_result.pbmsg  qmmm_basic.py
tests/available/: Makefile  available_test.cpp
tests/energy_grad_force/: energy_grad_force_test.cpp  test_energy_grad_force.py
tests/tcpb-client-docker/: Dockerfile
tests/test_data/: water_angstrom.pb  water_bohr.pb
