[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "tcpb"
version = "0.15.0"
description = "A Python client for TeraChem's protocol buffer API."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Colton Hicks", email = "github@coltonhicks.com" }]
requires-python = ">=3.10"
keywords = ["quantum-chemistry", "terachem", "protocol-buffers"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dependencies = [
  "google==1.9.3",
  "protobuf==3.20.1",
  "numpy>=1.13",
  "httpx>=0.27",
  "qcdata>=0.17.0",
  "pydantic>=2.0.0,!=2.4.0",
  "pydantic-settings>=2.0.3,<3",
  "qcconst>=0.2.1,<0.3",
]

[project.urls]
Homepage = "https://github.com/mtzgroup/tcpb-client"
Documentation = "https://mtzgroup.github.io/tcpb-client/"
Source = "https://github.com/mtzgroup/tcpb-client"
Changelog = "https://github.com/mtzgroup/tcpb-client/blob/master/CHANGELOG.md"
"Bug Tracker" = "https://github.com/mtzgroup/tcpb-client/issues"
repository = "https://github.com/mtzgroup/tcpb-client"

[dependency-groups]
dev = [
  "ruff>=0.15.8,<0.16",
  "mypy>=1.19.1,<2",
  "pre-commit>=4.5.1,<5",
  "pytest-cov>=7.0.0,<8",
  "coverage>=7.11.0,<8",
  "pytest-httpx>=0.23.0",
  "pytest-mock>=3.11.1,<4",
  "types-protobuf>=5.27.0.20240626,<6",
  "types-toml>=0.10.8.20240310,<0.11",
  "toml>=0.10.2,<0.11",
]
docs = [
  "mkdocs>=1.6.1,<2",
  "mkdocs-material>=9.5.34,<10",
  "mkdocstrings[python]>=0.26.1,<0.27",
  "markdown-include>=0.8.1,<0.9",
]

[tool.pytest.ini_options]
testpaths = "tests/"
filterwarnings = [
  "ignore::FutureWarning",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
isort = { known-first-party = ["tcpb", "tests"] }
select = ["I", "F401"]

[tool.mypy]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.coverage.run]
branch = true
omit = ["*/tests/*", "*/migrations/*", "*site-packages*", "*__init__.py"]
